tests/run/error_field_type.out
tests/run/error_field_type.em:3:30: error: field value type does not match the declared field
